--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column ">
     <nav class="navbar nav fixed-top navbar-expand-lg navbar-dark shadow-5-strong">
         <div class="container-fluid">
             <a class="navbar-brand" href="#home">Ngasem</a>
@@ -62,11 +62,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Language
+                            Bahasa
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/tourism/">Bahasa</a></li>
-                            <li><a class="dropdown-item" href="/tourism/ar">Arabic</a></li>
+                            <li><a class="dropdown-item" href="/tourism/ar">Arab</a></li>
                             <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
                         </ul>
                     </li>
@@ -77,14 +77,14 @@
     <main>
         <div id="home" class="bgImage tebing d-flex flex-column justify-content-center will-fadeIn">
             <div id="homeTitle">
-                <h2>Selamat Datang</h2>
-                <p>di</p>
+                <h2>Welcome</h2>
+                <p>to</p>
                 <h1>Padukuhan Ngasem</h1>
             </div>
         </div>
         <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h1>Peta Wilayah</h1>
+                <h1>Map of the Territory</h1>
             </div>
             <div id="map">
 
@@ -109,16 +109,15 @@
                         <span class="petik">"</span>
                         <span class="petik">"</span>
                     </div>
-                    <p>Assalamualaikum warahmatullahi wabarakatuh.
-                        Saya Suwarno selaku Kepala Dusun Ngasem, mewakili segenap masyarakat Ngasem mengucapkan terima
-                        kasih kepada Mahasiswa UGM yg telah hadir di wilayah kami untuk melaksanakan KKN. Kegiatan yang
-                        telah dilakukan KKN tentunya membawa banyak sekali pembelajaran bagi masyarakat kami. Besar
-                        harapan kami agar segala observasi, komunikasi, dan penelitian yang dilakukan dapat segera
-                        terealisasi dengan lancar sehingga bisa meningkat kesejahteraan warga, baik di Dusun Ngasem
-                        maupun Desa Tileng secara keseluruhan.
+                    <p>My name is Suwarno, the sub-village chief of Dusun Ngasem. On behalf of my people, I would like
+                        to thank the students of UGM for coming to our place for UGM’s student service program. Our
+                        people can learn plenty of benefits from the projects that have been conducted for approximately
+                        50 days here. We are hoping that all of the observations, communications, and research can be
+                        done smoothly and can be realized as soon as possible so that they can uplift people’s welfare,
+                        not only in Dusun Ngasem but also in Desa Tileng as a whole.
                     </p>
                     <div class="dukuhName">
-                        <small>-Bapak Suwarno-</small>
+                        <small>-Mr. Suwarno-</small>
                     </div>
                 </div>
                 <img class="potret" src="images/potretDukuh/PakDukuhCropped.jpg" alt="Dukuh Ngasem">
@@ -126,15 +125,14 @@
         </div>
         <div id="cliff" class="bgImage tebingTutup  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="description">
-                <h2>Tebing</h2>
-                <p>Dusun Ngasem merupakan dusun yang memiliki deretan tebing-tebing berbatasan dengan laut. Terdapat
-                    empat tebing yang terletak di Dusun Ngasem dari sisi timur ke barat meliputi Tebing Kijingan, Tebing
-                    Watusigar, Tebing Tutup, dan Tebing Pringkuku. Keempat tebing tersebut seluruhnya memiliki ciri khas
-                    tersendiri dengan landscape yang indah. Jalanan menuju tebing dikelilingi oleh lahan pertanian dan
-                    peternakan yang luas dan subur milik warga Dusun Ngasem. Disamping daya tarik pemandangannya,
-                    jajaran tebing-tebing di Dusun Ngasem juga menjadi spot warga dalam mencari hasil laut berupa
-                    lobster, kerang, kepiting, dan hasil laut lainnya. Sebagian masyarakat luar yang memiliki hobi
-                    memancing juga terkadang mengunjungi tebing di Dusun Ngasem saat musim penghujan.</p>
+                <h2>The Cliffs</h2>
+                <p>Dusun Ngasem is a territory that has a line of cliffs, bordering the sea. There are four cliffs in
+                    Dusun Ngasem from the east to the west side, namely Kijingan Cliff, Watusigar Cliff, Tutup Cliff,
+                    and Pringkuku Cliff. Four of the cliffs have their own uniqueness with exquisite landscapes. The
+                    road to the cliff is surrounded by large and fertile fields and farms owned by the Ngasem people.
+                    Aside from its appealing view, the cliffs of Ngasem are also used by the people to look for
+                    lobsters, shells, crabs, and other commodities. Many people from outside the village also come to
+                    the cliffs during the rainy season, mainly to do fishing. </p>
                 <a href="#" class="more">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                         <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
@@ -145,25 +143,22 @@
         <div id="rasulan" class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="description">
                 <h2>Rasulan</h2>
-                <p>Rasulan merupakan kegiatan tahunan yang dilaksanakan di berbagai daerah di Gunungkidul tidak
-                    terkecuali di Dusun Ngasem. Rasulan dilaksanakan sebagai bentuk rasa syukur kepada Tuhan Yang Maha
-                    Esa atas rezeki hasil panen. Disamping itu, dalam kegiatan ini masyarakat juga memanjatkan doa
-                    kepada Tuhan YME agar terus dikaruniai limpahan rezeki, kesehatan, dan keselamatan. Rasulan juga
-                    sering disebut bersih dusun yang memiliki makna bahwa kegiatan ini harapannya memberikan keberkahan
-                    pada masyarakat dan menjauhkan dari malapetaka sehingga kehidupan masyarakat dapat tentram dan
-                    tenang.
+                <p>Rasulan is an annual tradition that is held in some regions in Gunungkidul Regency, for example in
+                    Dusun Ngasem. Rasulan is conducted as a form of gratitude to God for giving a prosperous harvest.
+                    Moreover, people also pray to God in order to receive prosperity, health, and welfare. Rasulan is
+                    called “Bersih Dusun” as well because it signifies the purpose of this tradition to achieve
+                    blessings and ward off calamity so that the people are able to live a good life.
 
                 </p>
 
                 <p>
-                    Di Dusun Ngasem, Rasulan juga menjadi ritual mendoakan leluhur yang telah mendahului. Waktu
-                    pelaksanaan Rasulan pun tidak boleh sembarangan dan harus sesuai dengan perhitungan tanggalan jawa.
-                    Rangkaian acara Rasulan di Dusun Ngasem meliputi pertunjukan ledhek, prosesi ngrancah, campursari,
-                    dan wayang kulit. Rosulan Dusun Ngasem juga diramaikan dengan adanya bazar atau stand umkm Tileng
-                    sekitarnya.
-                    Saat rasulan biasanya kerabat dari warga Dusun Ngasem berkunjung ke rumah dan warga pun memasak
-                    masakan khusus layaknya acara lebaran.</p>
-                <a href="#" class="more">
+                    In Dusun Ngasem, Rasulan is also a ritual to send homage and prayers for ancestors. The time to hold
+                    Rasulan must follow the Javanese calendar and must not hold randomly. The events of Rasulan include
+                    Ledhek dance, Ngrancah procession, Campursari, and Wayang Kulit. Rasulan in Dusun Ngasem is also
+                    enlivened by bazaars and various stalls. During Rasulan, relatives of the people in Ngasem usually
+                    visit the neighborhood and people there cook special dishes similar to the Eid Al-Fitr celebration.
+                </p>
+                <a href="/tourism/rasulan/en" class="more">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                         <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
                     </svg>
@@ -176,21 +171,21 @@
 
                 <div>
                     <p>
-                        Kami merupakan anggota sub unit KKN-PPM UGM Girisubo 2022 yang ditempatkan di Dusun Ngasem
-                        terdiri dari 6 orang yaitu Alifia dari prodi Manajemen dan Kebijakan Publik, Sasa dari prodi
-                        Sastra Inggris, Laila dari prodi Profesi Dokter, Rani dari prodi Fisika, Hafizhan dari prodi
-                        Sastra Arab dan Barik dari prodi Matematika. Kami melaksanakan KKN-PPM ini selama 50 hari dari
-                        25 Juni hingga 13 Agustus 2022.
+                        We are the members of one of the subunits of KKN-PPM UGM Girisubo 2022 which consists of 6
+                        people, namely Alifia from the Department of Management and Public Policy, Sasa from the English
+                        Department, Laila from the Faculty of Medicine, Public Health, and Nursing, Rani from the
+                        Department of Physics, Hafizhan from the Arabic Literature Department, and Barik from the
+                        Department of Math. We conduct this student service program from June 25 to August 13, 2022.
                     </p>
 
                     <p>
-                        Tujuan kami melaksanakan KKN-PPM ini adalah untuk meningkatkan
-                        kualitas dan kesinambungan kegiatan KKN-PPM UGM di tengah masyarakat guna mewujudkan masyarakat
-                        yang tangguh, mandiri dan sejahtera; meningkatkan pemahaman dosen, mahasiswa, masyarakat dan
-                        para mitrakerja tentang pembangunan berkelanjutan yang tertuang dalam SGDs dan education for
-                        sustainable development (ESD) melalui implementasi KKN-PPM UGM; serta mempromosikan program
-                        KKN-PPM UGM sebagai wahana penyelesaian suatu permasalahan berbasis kearifan dan potensi lokal
-                        serta kerjasama kemitraan kepada masyarakat, pemerintah, dan pemangku kepentingan yang lain.
+                        The purpose of this program is to raise the quality and continuity of UGM’s student service
+                        program amid the people to create a firm, independent, and prosperous society; raise the
+                        understanding of the lecturers, students, public, and partners about the sustainable development
+                        initiated in SDGs and education for sustainable development (ESD) through the implementation of
+                        the student service program (KKN-PPM UGM); and to promote KKN-PPM UGM as a vehicle to fix the
+                        problems based on local wisdom and potency as well as the collaboration of external partners
+                        with the society, government, and stakeholders.
                     </p>
 
                 </div>
@@ -205,16 +200,29 @@
         crossorigin="anonymous"></script>
     <script src="./index.js"></script>
     <footer class="d-flex flex-column align-items-center footer bg-dark mt-auto">
-        <div class="py-3">
-            <a class="contact" href="https://www.instagram.com/kkngirisubo/">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M 8 3 C 5.243 3 3 5.243 3 8 L 3 16 C 3 18.757 5.243 21 8 21 L 16 21 C 18.757 21 21 18.757 21 16 L 21 8 C 21 5.243 18.757 3 16 3 L 8 3 z M 8 5 L 16 5 C 17.654 5 19 6.346 19 8 L 19 16 C 19 17.654 17.654 19 16 19 L 8 19 C 6.346 19 5 17.654 5 16 L 5 8 C 5 6.346 6.346 5 8 5 z M 17 6 A 1 1 0 0 0 16 7 A 1 1 0 0 0 17 8 A 1 1 0 0 0 18 7 A 1 1 0 0 0 17 6 z M 12 7 C 9.243 7 7 9.243 7 12 C 7 14.757 9.243 17 12 17 C 14.757 17 17 14.757 17 12 C 17 9.243 14.757 7 12 7 z M 12 9 C 13.654 9 15 10.346 15 12 C 15 13.654 13.654 15 12 15 C 10.346 15 9 13.654 9 12 C 9 10.346 10.346 9 12 9 z">
-                    </path>
-                </svg>
-            </a>
-        </div>
-        <div class="pb-3">
+
+        <div class="p-3 logo">
+            <span>
+                <img src="./images/UGM_Logo.png" width="30" height="30" alt="ugm logo">
+                <img src="./images/KKN_Logo.png" width="30" height="30" alt="kkn logo">
+                <img src="./images/KKN_Unit_Logo.png" width="30" height="30" alt="kkn unit logo">
+            </span>
+            <span>
+                <a class="contact" href="https://www.instagram.com/kkngirisubo/">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 24 24">
+                        <path
+                            d="M 8 3 C 5.243 3 3 5.243 3 8 L 3 16 C 3 18.757 5.243 21 8 21 L 16 21 C 18.757 21 21 18.757 21 16 L 21 8 C 21 5.243 18.757 3 16 3 L 8 3 z M 8 5 L 16 5 C 17.654 5 19 6.346 19 8 L 19 16 C 19 17.654 17.654 19 16 19 L 8 19 C 6.346 19 5 17.654 5 16 L 5 8 C 5 6.346 6.346 5 8 5 z M 17 6 A 1 1 0 0 0 16 7 A 1 1 0 0 0 17 8 A 1 1 0 0 0 18 7 A 1 1 0 0 0 17 6 z M 12 7 C 9.243 7 7 9.243 7 12 C 7 14.757 9.243 17 12 17 C 14.757 17 17 14.757 17 12 C 17 9.243 14.757 7 12 7 z M 12 9 C 13.654 9 15 10.346 15 12 C 15 13.654 13.654 15 12 15 C 10.346 15 9 13.654 9 12 C 9 10.346 10.346 9 12 9 z">
+                        </path>
+                    </svg>
+                </a>
+                <a class="contact" href="https://www.tiktok.com/@ngasemceria">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 24 24">
+                        <path
+                            d="M 6 3 C 4.3550302 3 3 4.3550302 3 6 L 3 18 C 3 19.64497 4.3550302 21 6 21 L 18 21 C 19.64497 21 21 19.64497 21 18 L 21 6 C 21 4.3550302 19.64497 3 18 3 L 6 3 z M 6 5 L 18 5 C 18.56503 5 19 5.4349698 19 6 L 19 18 C 19 18.56503 18.56503 19 18 19 L 6 19 C 5.4349698 19 5 18.56503 5 18 L 5 6 C 5 5.4349698 5.4349698 5 6 5 z M 12 7 L 12 14 C 12 14.56503 11.56503 15 11 15 C 10.43497 15 10 14.56503 10 14 C 10 13.43497 10.43497 13 11 13 L 11 11 C 9.3550302 11 8 12.35503 8 14 C 8 15.64497 9.3550302 17 11 17 C 12.64497 17 14 15.64497 14 14 L 14 10.232422 C 14.616148 10.671342 15.259118 11 16 11 L 16 9 C 15.952667 9 15.262674 8.7809373 14.78125 8.3613281 C 14.299826 7.941719 14 7.4149911 14 7 L 12 7 z">
+                        </path>
+                    </svg>
+                </a>
+            </span>
             <span class="text-white-50">&copy; kkn-ppm ugm 2022 </span>
         </div>
     </footer>
