--- a/rasulan/index.html
+++ b/rasulan/index.html
@@ -41,9 +41,9 @@
                             Bahasa
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/tourism/en">Inggris</a></li>
-                            <li><a class="dropdown-item" href="/tourism/ar">Arab</a></li>
-                            <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/en">Inggris</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/ar">Arab</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
