--- a/en.html
+++ b/en.html
@@ -31,27 +31,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#home">Beranda</a>
+                    <a class="nav-link" href="#home">Home</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Tentang Ngasem
+                            About Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#mapNgasem">Peta Wilayah</a></li>
-                            <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
-                            <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
-
+                            <li><a class="dropdown-item" href="#mapNgasem">Map of Territory</a></li>
+                            <li><a class="dropdown-item" href="#prakata">Foreword Sub-village Chief</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Potensi Wisata
+                            Tourism Potency
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#cliff">Tebing</a></li>
+                            <li><a class="dropdown-item" href="#cliff">The Cliffs</a></li>
                             <li><a class="dropdown-item" href="#rasulan">Rasulan</a></li>
                         </ul>
                     </li>
@@ -62,12 +60,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Bahasa
+                            Language
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/tourism/">Bahasa</a></li>
-                            <li><a class="dropdown-item" href="/tourism/ar">Arab</a></li>
-                            <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
@@ -93,13 +89,6 @@
         <div id="description" class="bgImage deskripsi d-flex flex-column justify-content-center will-fadeIn">
             <div>
                 <h2>Padukuhan Ngasem</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione ipsum, a exercitationem
-                    voluptatum perspiciatis possimus porro ad obcaecati, incidunt sint modi velit. Officia assumenda
-                    rerum tenetur eos nulla corporis.
-                    Illum corporis ipsa natus dignissimos eligendi dolore aperiam et, veniam, porro quibusdam eaque
-                    explicabo facilis eius, dolor repellat minus aliquid nemo! Placeat molestias aut dolores non omnis
-                    beatae commodi pariatur?
-                </p>
             </div>
         </div>
         <div id="prakata" class="bgImage dukuhBackground  d-flex align-items-center justify-content-center will-fadeIn">
@@ -133,11 +122,11 @@
                     Aside from its appealing view, the cliffs of Ngasem are also used by the people to look for
                     lobsters, shells, crabs, and other commodities. Many people from outside the village also come to
                     the cliffs during the rainy season, mainly to do fishing. </p>
-                <a href="#" class="more">
+                <!-- <a href="#" class="more">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                         <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
                     </svg>
-                </a>
+                </a> -->
             </div>
         </div>
         <div id="rasulan" class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
