--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
             </div>
         </div>
-        <div id="description" class="bgImage deskripsi d-flex flex-column justify-content-center will-fadeIn">
+        <!-- <div id="description" class="bgImage deskripsi d-flex flex-column justify-content-center will-fadeIn">
             <div>
                 <h2>Padukuhan Ngasem</h2>
             </div>
-        </div>
+        </div> -->
         <div id="prakata" class="bgImage dukuhBackground  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="kataDukuh">
                 <div>
